--- a/styles/affection.css
+++ b/styles/affection.css
@@ -18,7 +18,8 @@
     text-align: center;
     width: 42%;
     padding-left: 8%;
-    font-size: 1.5vw;
+    font-size: 1.7vw;
+    letter-spacing: 3px;
 }
 
 #box-affection-rigth {
@@ -31,5 +32,26 @@
 }
 
 #content-affection {
-    width: 70%;    
+    width: 75%;
+    font-size: 13pt;
+}
+
+@media(max-width: 800px) {
+    #container-affection {
+        height: auto;
+        flex-wrap: wrap;
+    }
+    #box-affection-left {
+        width: 90%;
+        padding-left: 0;
+        font-size: 5vw;
+        height: 30vw;
+    }
+    #box-affection-rigth {
+        width: 80%;        
+    }
+    #content-affection {
+        width: 100%;
+        padding-bottom: 50px;
+    }
 }
