--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,7 @@
 footer {
     display: flex;
     width: 100%;
-    height: 20vh;
+    height: 18vh;
     justify-content: center;
     border-top: 1px solid #90857B;
     background-color: #362E26;
@@ -9,4 +9,17 @@ footer {
 
 #box-footer {
     padding-top: 20px;
+    color: #90857B;
+    font-size: 11pt;
+    font-weight: normal;
+}
+
+@media(max-width: 800px){
+    #box-footer {
+        display: flex;
+        width: 80%;
+        justify-content: center;
+        text-align: center;
+        line-height: 20px;
+    }
 }
