--- a/styles/photos.css
+++ b/styles/photos.css
@@ -14,6 +14,7 @@
     width: 25%;
     height: 100%;
     background-image: url('../assets/photo-01.jpg');
+    background-position: -350px;
     -webkit-box-shadow: inset 0px 0px 294px 200px rgba(255, 255, 255, 0.38);
     -moz-box-shadow: inset 0px 0px 294px 200px rgba(255, 255, 255, 0.38);
     box-shadow: inset 0px 0px 294px 200px rgba(255, 255, 255, 0.38);    
@@ -33,4 +34,10 @@
     -webkit-box-shadow: inset 0px 0px 294px 200px rgba(255, 255, 255, 0.2);
     -moz-box-shadow: inset 0px 0px 294px 200px rgba(255, 255, 255, 0.2);
     box-shadow: inset 0px 0px 294px 200px rgba(255, 255, 255, 0.2);
+}
+
+@media(max-width: 800px) {
+    #container-photos {
+        height: 100vw;
+    }
 }
